# ripple1d

./: .env.example  .flaskenv  .gitignore  CONTRIBUTING.md  Dockerfile  Interactive - conflation_metrics.py.ipynb  LICENSE  MANIFEST.in  Notes.url  README.md  api-load-env.bat  api-start.bat  api-test.bat  build-test.bat  build_wheel.py  cm_test.py  conflate_ras_nwm.py  consts.py  dev.py  make_new_item.py  new-collection.sh  pids.txt  pyproject.toml  ras.py  readthedocs.yaml  requirements-linux.txt  requirements-windows.txt  requirements.txt  ripple_api.py  stac-example.py  tmp.py  utils.py
.github/workflows/: ci.yaml  release.yaml
api/: README.md  __init__.py  app.py  log.py  manager.py  postman_collection.json  run_api_test.py  tasks.py  utils.py
docs/: Makefile  api_reference.rst  build_release_changelog.py  change_log.rst  changes.rst  conf.py  for_devs.rst  for_users.rst  index.rst  make.bat  postman.rst  reference.rst  requirements.txt  tech_reference.rst  tech_summary.rst  users_change_log.rst
docs/_templates/: navbar-logo.html
docs/api/: index.rst  log.rst  manager.rst  tasks.rst  utils.rst
docs/endpoints/: compute_conflation_metrics.rst  conflate_model.rst  create_ras_terrain.rst  extract_submodel.rst  ras_to_gpkg.rst  run_incremental_normal_depth.rst  run_known_wse.rst
docs/ripple/: data_model.rst  errors.rst  index.rst  ras.rst  ras_to_gpkg.rst  ripple_logger.rst
docs/ripple1d/: data_model.rst  index.rst  ripple_logger.rst
docs/source/: api_reference.rst  change_log.rst  conf.py  faq.rst  index.rst  postman.rst  requirements.txt  tech_summary.rst  user_guide.rst
model_build/: rasmap.py
production/: README.md  batch_process_flows2fim.py  collection_summary.py  copy_dbs_to_library.py  copy_fims_to_library.py  copy_outputs_to_library.py  create_conflation_db.py  create_libraray_db.py  create_nwm_discharge_files.py  create_runner.py  db_utils.py  gpkg_merge.py  headers.py  load_conflation_from_model.py  load_rating_curves.py  load_xs_data_to_db.py  mip_catalog.py  move_fims_to_library.py  populate_conflation_db.py  populate_conflation_to_id.py  populate_ripple_to_id.py  process_kwse_runs.py  purge_reaches_data.py  ras_to_gpkg.py  runner.py  source_models_from_stac.py  stac_item_from_aws.py  step_10_fim_model_stac.py  step_10_nwm_reach_model_stac.py  step_11_fim_lib_stac.py  step_1_extract_geometry.py  step_2_create_stac.py  step_3_5_metrics.py  step_3_conflate_model.py  step_4_subset_gpkg.py  step_5_create_terrain.py  step_6_initial_normal_depth.py  step_7_incremental_normal_depth.py  step_8_known_water_surface_elevation.py  step_9_create_fim_lib.py
ripple/: __init__.py  __main__.py  cm_test.py  conflation_metrics.py  consts.py  data_model.py  db.py  errors.py  geom_to_gpkg.py  initial_normal_depth_run.py  known_water_surface_elevation_run.py  nwm_reaches.py  post_process_ras_results.py  process.py  ras.py  ras2.py  ras_to_gpkg.py  rasmap.py  ripple_logger.py  run_process.py  run_process_production.py  second_normal_depth_run.py  sqlite_utils.py  subset_gpkg.py  utils.py
ripple/conflate/: plotter.py  ras1d.py  rasfim.py  run.py  run_rasfim.py
ripple/examples/: combine_geom.py  conflate_with_stac.py
ripple/exe/: make_all_ras_terrains.py  make_ras_terrain.py  make_ras_terrain_local.py
ripple/ops/: conflate_ras_model.py  create_fim_lib.py  create_ras_terrain.py  fim_lib.py  ras_conflate.py  ras_run.py  ras_terrain.py  run_ras_model.py  subset_gpkg.py
ripple/scripts/: conflate_with_stac_v2.py  create_fim_lib.py  create_ras_terrain.py  geom_to_gpkg.py  gpkg_to_stac_items.py  infer_crs_json_to_cases_db.py  initial_normal_depth_run.py  known_water_surface_elevation_run.py  make_all_ras_terrains.py  make_ras_terrain.py  make_ras_terrain_local.py  post_process_ras_results.py  second_normal_depth_run.py  subset_gpkg.py
ripple/stacio/: fim_collection.py  gpkg_plot.py  gpkg_to_stac_items.py  gpkg_utils.py  ras_dgs_to_mip_collection.py  ras_items_to_mip_collection.py  s3_utils.py  stac_utils.py  update_mip_collection_for_ripple.py
ripple/utils/: dg_utils.py  gpkg_utils.py  ripple_utils.py  s3_utils.py  sqlite_utils.py  stac_utils.py
ripple1d/: __init__.py  __version__.py  consts.py  data_model.py  errors.py  ras.py  ras_to_gpkg.py  ras_utils.py  rasmap.py  ripple1d_logger.py  ripple_logger.py  version.py
ripple1d/api/: app.py  log.py  manager.py  postman_collection.json  run_api_test.py  tasks.py  utils.py
ripple1d/conflate/: __init__.py  plotter.py  rasfim.py
ripple1d/hecstac/: __init__.py  ras_to_gpkg.py
ripple1d/ops/: __init__.py  delta_terrain.py  delta_terrain_metrics.py  endpoints.py  fim_lib.py  metrics.py  ras_conflate.py  ras_run.py  ras_terrain.py  stac_item.py  subset_gpkg.py
ripple1d/stacio/: __init__.py  fim_collection.py  ras_dgs_to_mip_collection.py  (+3 more)
tests/: __init__.py  api_tests.py  api_tests_Baxter.py  api_tests_MissFldwy.py  api_tests_PatuxentRiver.py  bad_projection_test.py  conflation_tests.py  conftest.py  metrics_tests.py  read_ras_files_tests.py  rounding_error_test.py  run_api_tests.py  terrain_agreement_tests.py  utils.py
(+179 files in other folders)
